comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>]
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p> Texto do Artigo 001</p>
+            <h2>Curso 1</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et atque tempore laborum voluptatum maxime esse dolores placeat consequuntur ratione ipsam ipsa autem sed temporibus enim eius ut, pariatur repellendus nostrum.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem quia excepturi exercitationem tempore corrupti fuga earum. Hic, nobis provident quasi aspernatur non fugiat accusantium molestiae placeat autem nostrum nesciunt accusamus.</p>
         </article>
 
     </main>  
